# defi-ds

./: .gitignore  README.md  pyproject.toml
data/: c.json  coingecko_pipeline.duckdb  defi_risk_test.duckdb  e.ipynb  test.duckdb  test.py  user_state_events.csv
data/curve/: borrower_debt.csv  borrower_state.csv  crvusd_addresses.json
data/prices/: weth_coingecko.csv
dbt_projects/curve/: dbt_project.yml
dbt_projects/curve/models/: logs_decoded.sql
notebooks/: EDA.ipynb  llamarisk_curve.ipynb
scripts/: coingecko_pipeline.py  curve_pipeline.py  defi_risk_pipeline.py  prices_pipeline.py
src/defi_ds/: data.py  risk_scores.py
src/defi_ds/data/: __init__.py  coingecko.py  etherscan.py
src/defi_ds/data/source/: etherscan.py
src/defi_ds/data/transform/: borrower_state.py  curve_debt.py
src/defi_ds/risk_score/: __init__.py  asset_volatility.py  borrower_concentration.py  calculator.py  utils.py
src/defi_ds/risk_scores/: asset_volatility.py  scores.py
