[project]
name = "defi-ds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.9.4,<1.10",
    "dbt-duckdb>=1.9.4,<1.10",
    "dlt[duckdb,filesystem]>=1.12.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "web3>=7.12.0",
    "yfinance>=0.2.63",
]
